--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,10 @@ a {
 * {
   box-sizing: border-box;
 }
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
